--- a/app-web/package.json
+++ b/app-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-web",
+  "name": "app-web-generate-reports",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "@ngneat/tailwind": "^6.0.3",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
