--- a/app-web/package.json
+++ b/app-web/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "@ngneat/tailwind": "^6.0.3",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
